--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <div id="columns">
     <div id="side">
       <ul>
+        <li><a><%= Time.now.strftime("%d/%m/%Y %H:%M") %></a></li><br/>
         <li><a href="http://www....">Home</a></li>
         <li><a href="http://www..../faq">Questions</a></li>
         <li><a href="http://www..../news">News</a></li>
