--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
   </div>
   <div id="columns">
     <div id="side">
+      <div id="cart">
+        <% if @cart %>
+          <%= render @cart %>
+        <% end %>
+      </div>
+
       <ul>
         <li><a><%= Time.now.strftime("%d/%m/%Y %H:%M") %></a></li><br/>
         <li><a href="http://www....">Home</a></li>
