--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,18 +1,3 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
 body, body > p, body > ol, body > ul, body > td {margin: 8px !important}
 
 #banner {
@@ -56,6 +41,7 @@ body, body > p, body > ol, body > ul, body > td {margin: 8px !important}
     flex: 1;
   }
 
+//
   #side {
     padding: 1em 2em;
     background: #141;
@@ -70,10 +56,10 @@ body, body > p, body > ol, body > ul, body > td {margin: 8px !important}
 
     #cart {
       font-size: smaller;
-      color: white;
+      color:     white;
 
       table {
-        border-top: 1px dotted #595;
+        border-top:    1px dotted #595;
         border-bottom: 1px dotted #595;
         margin-bottom: 10px;
       }
@@ -92,6 +78,7 @@ body, body > p, body > ol, body > ul, body > td {margin: 8px !important}
       }
     }
   }
+//
 }
 
 @media all and (max-width: 800px) {
@@ -109,3 +96,45 @@ body, body > p, body > ol, body > ul, body > td {margin: 8px !important}
     display: none;
   }
 }
+
+.depot_form {
+  fieldset {
+    background: #efe;
+
+    legend {
+      color: #dfd;
+      background: #141;
+      font-family: sans-serif;
+      padding: 0.2em 1em;
+    }
+
+    div {
+      margin-bottom: 0.3em;
+    }
+  }
+
+  form {
+    label {
+      width: 5em;
+      float: left;
+      text-align: right;
+      padding-top: 0.2em;
+      margin-right: 0.1em;
+      display: block;
+    }
+
+    select, textarea, input {
+      margin-left: 0.5em;
+    }
+
+    .submit {
+      margin-left: 4em;
+    }
+
+    br {
+      display: none
+    }
+  }
+}
+
+
