--- a/app/views/order_mailer/received.text.erb
+++ b/app/views/order_mailer/received.text.erb
@@ -1,8 +1,9 @@
-Order#received
+Dear <%= @order.name %>
 
-Dear <%= Order.name %>
 Thank you for your recent order from The Pragmatic Store.
 
-You ordered the folowing items:
+You ordered the following items:
+
 <%= render @order.line_items -%>
-We'll send you a seperate e-mail when your order ships.
+
+We'll send you a separate e-mail when your order ships.
